// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: NotificationCenter should render correctly 1`] = `
<Popover
  bottom={true}
  left={true}
  right={true}
  trigger={
    <UnstyledLink
      className="IconWrapper"
    >
      <NotificationsUnread
        className="UnreadIcon"
        size={22}
      />
    </UnstyledLink>
  }
>
  <div
    className="ListWrapper"
  >
    <Notification
      component={[Function]}
      key="notification-1"
      title="An unread informational notification"
      type="info"
      unread={true}
    />
    <Notification
      component={[Function]}
      key="notification-2"
      type="warning"
      unread={false}
    />
  </div>
</Popover>
`;

exports[`Component: NotificationCenter should render with no notifications 1`] = `
<Popover
  bottom={true}
  left={true}
  right={true}
  trigger={
    <UnstyledLink
      className="IconWrapper"
    >
      <Notifications
        size={22}
      />
    </UnstyledLink>
  }
>
  <div
    className="ListWrapper"
  >
    <div
      className="Empty"
    >
      <small>
        No notifications at this time.
      </small>
    </div>
  </div>
</Popover>
`;

exports[`Component: NotificationCenter should render with no unread notifications 1`] = `
<Popover
  bottom={true}
  left={true}
  right={true}
  trigger={
    <UnstyledLink
      className="IconWrapper"
    >
      <Notifications
        size={22}
      />
    </UnstyledLink>
  }
>
  <div
    className="ListWrapper"
  >
    <Notification
      component={[Function]}
      key="notification-1"
      title="An unread informational notification"
      type="info"
      unread={true}
    />
    <Notification
      component={[Function]}
      key="notification-2"
      type="warning"
      unread={false}
    />
  </div>
</Popover>
`;
